--- a/portfolio/items/gpt chatbot/index.html
+++ b/portfolio/items/gpt chatbot/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/msgpack5/5.0.0/msgpack5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.12.313/pdf.min.js"></script>
     <!-- SET UP GOOGLE ANALYTICS -->
     <script src="../../../google-analytics.js"></script>
   </head>
@@ -24,6 +25,7 @@
         <div class="col-12 col-xl-10 d-flex flex-nowrap">
           <div class="pdf-container"></div>
           <div class="pdf-input">
+            <input type="file" id="hiddenFileInput" style="display: none" accept=".pdf" />
             <i class="bi bi-file-earmark-pdf"></i>
             <span>Drop PDF Here</span>
           </div>
@@ -31,7 +33,7 @@
       </div>
       <div class="row mb-3 justify-content-center pdf-row">
         <div class="col-12 col-xl-10 text-center mt-1">
-          <a href="#" class="browse-computer">Upload a File</a>
+          <a href="#" class="browse-computer">Upload from Computer</a>
           <span class="mx-2">|</span>
           <a href="#" class="from-url">Add from URL</a>
         </div>
@@ -62,9 +64,9 @@
     <!-- Clipboard Alert -->
     <div class="toast" id="toast" style="position: fixed; top: 20px; right: 20px" data-delay="2000">
       <div class="toast-header">
-        <strong class="mr-auto pt-1 mb-1">Success</strong>
+        <strong class="mr-auto pt-1 mb-1">URL Hash copied to clipboard.</strong>
       </div>
-      <div class="toast-body">URL Hash copied to clipboard.</div>
+      <div class="toast-body">Paste link into browser to view saved chat.</div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
