--- a/portfolio/items/Compare/index.html
+++ b/portfolio/items/Compare/index.html
@@ -34,16 +34,24 @@
     <!-- Quicklink -->
     <script src="https://unpkg.com/quicklink"></script>
     <script>
-      window.addEventListener("load", () => {
-        quicklink.listen();
-        console.log("Quicklink Listening");
-      });
+      const isDeveloperMode = new URLSearchParams(window.location.search).get("developer") === "true";
+      if (!isDeveloperMode) {
+        window.addEventListener("load", () => {
+          quicklink.listen();
+          console.log("Quicklink Listening");
+        });
+      } else console.log("Developer Mode - Quick Link skipped");
     </script>
   </head>
   <body>
+    <!-- <div style="width: 64%; padding-bottom: 64%; left: 100px; top: 50px">
+      <div id="map-a" style="width: 100%; height: 100%"></div>
+    </div> -->
+
     <!-- <div id="map-a" style="width: 100%; padding-bottom: 62%"></div> -->
-    <div id="map-a" style="width: 64%; padding-bottom: 64%; left: 100px; top: 50px"></div>
-    <!-- <div id="map-a" style="width: 55%; padding-bottom: 55%; left: 400px; top: 100px"></div> -->
+
+    <!-- <div id="map-a" style="width: 64%; padding-bottom: 64%; left: 100px; top: 50px; border-radius: 50%; border: 3px solid #f99080"></div> -->
+    <div id="map-a" style="width: 55%; padding-bottom: 55%; left: 400px; top: 100px; border-radius: 50%; border: 2px solid #f99080"></div>
 
     <!-- <div class="container-xxl text-center">
       <div class="row">
